--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="header">
@@ -42,7 +42,29 @@
             </a>
         </div>
     </header>
-
-
-</body>
+    <section class=" section_motherhood">
+        <div class="section" >
+            <div class="motherhood">
+                <div class="motherhood_text">
+                    <h2 class="motherhood_title ">
+                        Motherhood
+                    </h2>
+                    <p class="motherhood_discription">
+                        Welcome to our Motherhood website, a nurturing hub designed exclusively for mothers, by mothers. Step into a sanctuary of support, wisdom, and connection as we journey together through the beautiful chaos of motherhood. 
+                        <br><br>Here, you'll find a treasure trove of resources tailored to every stage of the motherhood experience. From pregnancy to the toddler years and beyond, we're here to guide you with expert advice, heartfelt stories, and practical tips that resonate with the joys and challenges of raising little ones.
+                    </p>
+                    <div class="motherhood_btn">
+                        <a href="#">Learn more</a>
+                    </div>
+                </div>
+                <div class="motherhood_image" >
+                    <img class="motherhood_img" src="./assets/images/momAndGirl.png" alt="photo">
+                </div>
+                <div class="motherhood_bg">
+                    <img src="./assets/images/MOTHER.png" alt="mother" class="motherhood_bgtext">
+                </div>
+            </div>
+        </div>
+    </section>
+    </body>
 </html>
