third section created

--- a/index.html
+++ b/index.html
@@ -66,5 +66,82 @@
             </div>
         </div>
     </section>
+
+    <section class=" section_products">
+        <div class="section" >
+            <img src="./assets/images/MOTHER (Stroke) for products.png" alt="" class="products_bgimage">
+            <div class="products">
+                <h2 class="products_title ">
+                    Tips for mom 
+                </h2>
+                <div class="prosucts_firstSlider">
+                    <div class="product_card product_card-big ">
+                        <div class="product_rectangle-big">
+                            <img src="./assets/images/products1.png" alt="" class="product_image-big">
+                        </div>
+                        <div class="product_text">
+                            <h3 class="product_name">Analytics</h3>
+                            <p class="product_discription">5 products</p>
+                        </div>
+                    </div>
+                    <div class="card_box">
+                        <div class="product_card product_card-small ">
+                            <div class="product_rectangle-small">
+                                <img src="./assets/images/products2.png" alt="" class="product_image-big">
+                            </div>
+                            <div class="product_text">
+                                <h3 class="product_name">Print</h3>
+                                <p class="product_discription">2 products</p>
+                            </div>
+                        </div>
+                        <div class="product_card product_card-small ">
+                            <div class="product_rectangle-small">
+                                <img src="./assets/images/products3.png" alt="" class="product_image-big">
+                            </div>
+                            <div class="product_text">
+                                <h3 class="product_name">Creative Studio</h3>
+                                <p class="product_discription">11 products</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="prosucts_secondSlider">
+                    <div class="card_box">
+                        <div class="product_card product_card-small ">
+                            <div class="product_rectangle-small">
+                                <img src="./assets/images/products4.png" alt="" class="product_image-big">
+                            </div>
+                            <div class="product_text">
+                                <h3 class="product_name">Influencer Marketing</h3>
+                                <p class="product_discription">5 products</p>
+                            </div>
+                        </div>
+                        <div class="product_card product_card-small ">
+                            <div class="product_rectangle-small">
+                                <img src="./assets/images/products5.png" alt="" class="product_image-big">
+                            </div>
+                            <div class="product_text">
+                                <h3 class="product_name">Digital</h3>
+                                <p class="product_discription">2 products</p>
+                            </div>
+                        </div>
+                    </div>
+                     <div class="product_card product_card-big ">
+                        <div class="product_rectangle-big">
+                            <img src="./assets/images/products6.png" alt="" class="product_image-big">
+                        </div>
+                        <div class="product_text">
+                            <h3 class="product_name">Event</h3>
+                            <p class="product_discription">1 product</p>
+                        </div>
+                    </div>
+                </div>
+                <a href="#" class="btn products_btn">Show all products</a>
+            </div>
+        </div>
+    </section>
+
+
     </body>
 </html>
