fourth section created

--- a/index.html
+++ b/index.html
@@ -142,6 +142,68 @@
         </div>
     </section>
 
+     <section class="section_tips">
+        <div class="section" >
+            <img src="./assets/images/mother background for tips.png" alt="" class="tips_bgimage">
+            <div class="tips">
+                <h2 class="tips_title ">
+                    Tips
+                </h2>
+                <div class="tips_cards">
+                    <div class="tips_card card">
+                        <img src="./assets/images/tips1.png" alt="logo" class="card_logo">
+                        <div class="card_title">
+                            <h3 class="card_name">Have a first aid kit for yourself</h3>
+                            <img src="./assets/images/small arrow.png" alt="small arrow" class="card_arrow">
+                        </div>
+                        <p class="card_discription">Many who give useful advice to mothers of newborns rightly note that mothers should not forget about their own health and comfort. Because a young mother needs to have on hand.s</p>
+                    </div>
+                    <div class="tips_card card">
+                        <img src="./assets/images/tips2.png" alt="logo" class="card_logo">
+                        <div class="card_title">
+                            <h3 class="card_name">Have a first aid kit for yourself</h3>
+                            <img src="./assets/images/small arrow.png" alt="small arrow" class="card_arrow">
+                        </div>
+                        <p class="card_discription">Many who give useful advice to mothers of newborns rightly note that mothers should not forget about their own health and comfort. Because a young mother needs to have on hand.s</p>
+                    </div>
+                    <div class="tips_card card">
+                        <img src="./assets/images/tips3.png" alt="logo" class="card_logo">
+                        <div class="card_title">
+                            <h3 class="card_name">Have a first aid kit for yourself</h3>
+                            <img src="./assets/images/small arrow.png" alt="small arrow" class="card_arrow">
+                        </div>
+                        <p class="card_discription">Many who give useful advice to mothers of newborns rightly note that mothers should not forget about their own health and comfort. Because a young mother needs to have on hand.s</p>
+                    </div>
+                    <div class="tips_card card">
+                        <img src="./assets/images/tips4.png" alt="logo" class="card_logo">
+                        <div class="card_title">
+                            <h3 class="card_name">Have a first aid kit for yourself</h3>
+                            <img src="./assets/images/small arrow.png" alt="small arrow" class="card_arrow">
+                        </div>
+                        <p class="card_discription">Many who give useful advice to mothers of newborns rightly note that mothers should not forget about their own health and comfort. Because a young mother needs to have on hand.s</p>
+                    </div>
+                    <div class="tips_card card">
+                        <img src="./assets/images/tips5.png" alt="logo" class="card_logo">
+                        <div class="card_title">
+                            <h3 class="card_name">Have a first aid kit for yourself</h3>
+                            <img src="./assets/images/small arrow.png" alt="small arrow" class="card_arrow">
+                        </div>
+                        <p class="card_discription">Many who give useful advice to mothers of newborns rightly note that mothers should not forget about their own health and comfort. Because a young mother needs to have on hand.s</p>
+                    </div>
+                    <div class="tips_card card">
+                        <img src="./assets/images/tips6.png" alt="logo" class="card_logo">
+                        <div class="card_title">
+                            <h3 class="card_name">Have a first aid kit for yourself</h3>
+                            <img src="./assets/images/small arrow.png" alt="small arrow" class="card_arrow">
+                        </div>
+                        <p class="card_discription">Many who give useful advice to mothers of newborns rightly note that mothers should not forget about their own health and comfort. Because a young mother needs to have on hand.s</p>
+                    </div>
+                </div>
+    
+                <a href="#" class="btn tips_btn">All tips</a>
+            </div>
+        </div>
+    </section>
 
     </body>
 </html>
