--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
                                     <div class="underline"></div>
                                     </div>
                                 <div class="input__group">
-                                    <p class="message_text">City</p>
-                                    <div class="underl_ine"></div>
+                                    <p class="message__text">City</p>
+                                    <div class="underline"></div>
                                     </div>
                                 <div class="input__group">
                                     <p class="message__text">Phone number</p>
