--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="header" id="header">
       <nav class="header__nav nav">
-        <div class="header__logo logo">
+        <div class="logo">
           <h2>Logo</h2>
         </div>
         <ul class="nav__list">
@@ -56,7 +56,7 @@
         <div class="motherhood">
           <div class="motherhood__text">
             <h2 class="motherhood__title">Motherhood</h2>
-            <p class="motherhood__discription">
+            <p class="motherhood__description">
               Welcome to our Motherhood website, a nurturing hub designed
               exclusively for mothers, by mothers. Step into a sanctuary of
               support, wisdom, and connection as we journey together through the
@@ -76,13 +76,11 @@
               alt="photo"
             />
           </div>
-          <div class="motherhood__bg">
-            <img
-              src="./assets/images/MOTHER.png"
-              alt="mother"
-              class="motherhood__bgtext"
-            />
-          </div>
+          <img
+            src="./assets/images/MOTHER.png"
+            alt="mother"
+            class="motherhood__bgtext"
+          />
         </div>
       </div>
     </section>
@@ -96,7 +94,7 @@
         />
         <div class="products">
           <h2 class="products__title">Tips for mom</h2>
-          <div class="prosucts__firstSlider">
+          <div class="products__firstSlider">
             <div class="product__card product__card-big">
               <div class="product__rectangle-big">
                 <img
@@ -107,7 +105,7 @@
               </div>
               <div class="product__text">
                 <h3 class="product__name">Analytics</h3>
-                <p class="product__discription">5 products</p>
+                <p class="product__description">5 products</p>
               </div>
             </div>
             <div class="card__box">
@@ -121,7 +119,7 @@
                 </div>
                 <div class="product__text">
                   <h3 class="product__name">Print</h3>
-                  <p class="product__discription">2 products</p>
+                  <p class="product__description">2 products</p>
                 </div>
               </div>
               <div class="product__card product__card-small">
@@ -134,12 +132,12 @@
                 </div>
                 <div class="product__text">
                   <h3 class="product__name">Creative Studio</h3>
-                  <p class="product__discription">11 products</p>
+                  <p class="product__description">11 products</p>
                 </div>
               </div>
             </div>
           </div>
-          <div class="prosucts__secondSlider">
+          <div class="products__secondSlider">
             <div class="card__box">
               <div class="product__card product__card-small">
                 <div class="product__rectangle-small">
@@ -151,7 +149,7 @@
                 </div>
                 <div class="product__text">
                   <h3 class="product__name">Influencer Marketing</h3>
-                  <p class="product__discription">5 products</p>
+                  <p class="product__description">5 products</p>
                 </div>
               </div>
               <div class="product__card product__card-small">
@@ -164,7 +162,7 @@
                 </div>
                 <div class="product__text">
                   <h3 class="product__name">Digital</h3>
-                  <p class="product__discription">2 products</p>
+                  <p class="product__description">2 products</p>
                 </div>
               </div>
             </div>
@@ -178,7 +176,7 @@
               </div>
               <div class="product__text">
                 <h3 class="product__name">Event</h3>
-                <p class="product__discription">1 product</p>
+                <p class="product__description">1 product</p>
               </div>
             </div>
           </div>
@@ -211,7 +209,7 @@
                   class="card__arrow"
                 />
               </div>
-              <p class="card__discription">
+              <p class="card__description">
                 Many who give useful advice to mothers of newborns rightly note
                 that mothers should not forget about their own health and
                 comfort. Because a young mother needs to have on hand.s
@@ -231,7 +229,7 @@
                   class="card__arrow"
                 />
               </div>
-              <p class="card__discription">
+              <p class="card__description">
                 Many who give useful advice to mothers of newborns rightly note
                 that mothers should not forget about their own health and
                 comfort. Because a young mother needs to have on hand.s
@@ -243,7 +241,7 @@
                 alt="logo"
                 class="card__logo"
               />
-              <div class="card_title">
+              <div class="card__title">
                 <h3 class="card__name">Have a first aid kit for yourself</h3>
                 <img
                   src="./assets/images/small arrow.png"
@@ -251,7 +249,7 @@
                   class="card__arrow"
                 />
               </div>
-              <p class="card__discription">
+              <p class="card__description">
                 Many who give useful advice to mothers of newborns rightly note
                 that mothers should not forget about their own health and
                 comfort. Because a young mother needs to have on hand.s
@@ -271,7 +269,7 @@
                   class="card__arrow"
                 />
               </div>
-              <p class="card__discription">
+              <p class="card__description">
                 Many who give useful advice to mothers of newborns rightly note
                 that mothers should not forget about their own health and
                 comfort. Because a young mother needs to have on hand.s
@@ -291,7 +289,7 @@
                   class="card__arrow"
                 />
               </div>
-              <p class="card__discription">
+              <p class="card__description">
                 Many who give useful advice to mothers of newborns rightly note
                 that mothers should not forget about their own health and
                 comfort. Because a young mother needs to have on hand.s
@@ -311,7 +309,7 @@
                   class="card__arrow"
                 />
               </div>
-              <p class="card__discription">
+              <p class="card__description">
                 Many who give useful advice to mothers of newborns rightly note
                 that mothers should not forget about their own health and
                 comfort. Because a young mother needs to have on hand.s
@@ -330,16 +328,15 @@
           <h2 class="stories__title">Stories</h2>
           <div class="stories">
             <div class="story__card">
-              <div class="story__rectangle">
-                <img
-                  class="story"
-                  src="./assets/images/stories 1.png"
-                  alt="stories 1"
-                />
-              </div>
+              <img
+                class="story"
+                src="./assets/images/stories 1.png"
+                alt="stories 1"
+              />
+
               <div class="story__text">
                 <h3 class="story__title">Have a first aid kit for yourself</h3>
-                <p class="story__discription">
+                <p class="story__description">
                   Many who give useful advice to mothers of newborns rightly
                   note that mothers should many who give useful advice to
                   mothers of newborns rightly note that mothers should not
@@ -359,7 +356,7 @@
                   <h3 class="story__title">
                     Have a first aid kit for yourself
                   </h3>
-                  <p class="story__discription">
+                  <p class="story__description">
                     Many who give useful advice to mothers of newborns rightly
                     note that mothers should not forget...
                     <a class="readMore" href="#">Read more</a>
@@ -376,7 +373,7 @@
                   <h3 class="story__title">
                     Have a first aid kit for yourself
                   </h3>
-                  <p class="story__discription">
+                  <p class="story__description">
                     Many who give useful advice to mothers of newborns rightly
                     note that mothers should not forget...
                     <a class="readMore" href="#">Read more</a>
@@ -462,9 +459,7 @@
                     </div>
                   </div>
                 </form>
-                <div class="button__wrapper">
-                  <a href="#" class="btn message__btn">Show all products</a>
-                </div>
+                <a href="#" class="btn message__btn">Show all products</a>
               </div>
               <div class="vertical__line"></div>
               <div class="callUs">
